[package]
name = "shamirss"
version = "0.1.0"
edition = "2021"
authors = ["Bartosz Lenart <lenart.consulting@gmail.com>"]
rust-version = "1.79"
description = "Hobbist implementation of Shamirs Secret Sharing algorithm."
readme = "README.md"
repository = "https://github.com/Cipher-Bureau/shamirsss"
license-file = "LICENSE"
categories = ["algorithms", "cryptography", "cryptography::cryptocurrencies"]

[badges]
maintenance = { status = "experimental" }


[dependencies]
base64 = "0.22.1"
hex = "0.4.3"
thiserror = "2.0.3"
openssl = { version = "0.10.68", features = ["v111", "vendored"] }
openssl-sys = { version = "0.9.104", features = ["vendored"] }
rand = "0.8.5"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
opt-level = 3
name = "benchmarks"
harness = false

[profile.test]
opt-level = 3

[lints.rust]
unsafe_code = "forbid"

